--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p class="name left">JUEGO DE DORMITORIO TAURCO 2 PLZ 7 PIEZAS</p>
         <p class="price left bold">S/<span>999</span></p>
         <p class="cuotas left">12 x <span class="price-cuotas bold">S/82,87</span> con tarjeta*</p>
+        <input type="button" value="Comprar">
     </div>
 </body>
 </html>
