--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="center card">
+        <img class="cyber-logo" src="assets/icon/CyberDays.svg" alt="">
         <p class="envio">Envìo Gratis*</p>
         <div class="circle-car">
             <img class="center" src="assets/icon/camion.svg" alt="">
@@ -16,6 +17,10 @@
         <p class="name left">JUEGO DE DORMITORIO TAURCO 2 PLZ 7 PIEZAS</p>
         <p class="price left bold">S/<span>999</span></p>
         <p class="cuotas left">12 x <span class="price-cuotas bold">S/82,87</span> con tarjeta*</p>
+        <div class="descuento-ad">
+            <img class="pe-logo" src="assets/icon/PE-logo.svg" alt="">
+            <p><span class="bold dsct">S/899</span> con</p>
+        </div>
         <input type="button" value="Comprar">
     </div>
 </body>
